# fake-csv

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
config/: settings.py  urls.py
schemas/: admin.py  choices.py  forms.py  models.py  tasks.py  tools.py  urls.py  views.py
schemas/migrations/: 0001_initial.py  0002_auto_20210820_0001.py  0003_alter_job_status.py  0004_auto_20210825_2057.py  0005_job_url.py  0006_rename_url_job_file_url.py
static/css/: counter.css
static/js/: add_fields.js  change_fields.js  formset.js
staticfiles/css/: custom.css
templates/: delete_confirm.html  navbar.html  wrapper.html
templates/schemas/: data_sets.html  delete_confirm.html  job_create.html  schema_create.html  schema_data_sets_list.html  schema_detail.html  schema_list.html  schema_update.html
templates/users/: login.html
users/: urls.py  views.py
