[tool.poetry]
name = "fake-csv"
version = "0.1.0"
description = ""
authors = ["Abdul Magomedov <privetabdul@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Django = "^3.2.6"
python-dotenv = "^0.19.0"
Faker = "^8.11.0"
celery = "^5.1.2"
docker-compose = "^1.29.2"
psycopg2 = "^2.9.1"
redis = "^3.5.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
